11/9/10 add shape of battery terminals to model (with SR)
11/9/10 add shape of wires to model, associate voltage with a wire (with SR)
11/8/10 use Double.NaN for unknown voltage, display "?" in voltmeter, document in model
11/8/10 remove superfluous "show sign" feature in voltmeter
11/8/10 i18n of "?" for voltmeter display
11/8/10 add close button to voltmeter, similar to bar meters
11/8/10 fix close button on E-Field Detector
# 0.00.37 (45831) Nov 8, 2010
11/8/10 demo 3D probe with parallel projection
11/8/10 new 3D voltmeter black probe with parallel projection, from Noah P.
11/8/10 check in Sketchup files for 3D probes, created by Noah P.
11/8/10 another black voltmeter probe image from Noah P, previous one was slightly rotated
# 0.00.36 (45825) Nov 8, 2010
11/8/10 dev version to demo new 3D probes
11/8/10 new 3D voltmeter probes from Noah P, with outlined tips
11/8/10 fixed #2570, Vector2DNode bugs causing layout problems in E-field Detector for zero-magnitude vectors
11/8/10 new 3D E-field detector probe from Noah P, crosshairs properly centered
11/8/10 new 3D probes from Noah P.
11/8/10 feasibility test for Noah P. with 3D-looking voltmeter probe
11/4/10 decided that we will have no collision detection (11/4 status meeting)
11/4/10 decided not to add grid lines to E-Field Detector because of scale issues (11/4 meeting with NP)
11/2/10 control visibility of voltmeter and E-field detector in model
11/2/10 add getVoltageBetween to circuit model (needs to be properly implemented)
11/2/10 first pass at voltmeter
11/2/10 add zoom control to E-field detector
11/2/10 EFieldDetectorView was getting too large, move body and probe to separate files
11/2/10 generalize wire that connects a probe to a meter
11/1/10 constrain E-field probe location to be inside the bounds of the world
11/1/10 clean up handling of visibility for E-field detector
11/1/10 fix detector probe drag behavior, constrain to the play area via the model "world bounds"