@@ -2,16 +2,13 @@
 
 package edu.colorado.phet.capacitorlab.model;
 
-import java.awt.BasicStroke;
 import java.awt.Shape;
 import java.awt.geom.Area;
-import java.awt.geom.GeneralPath;
 import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.math.Point3D;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
-import edu.colorado.phet.common.phetcommon.view.util.DoubleGeneralPath;
 
 /**
  * A wire is a collection of connected wire segments.
@@ -21,14 +18,12 @@ import edu.colorado.phet.common.phetcommon.view.util.DoubleGeneralPath;
  */
 public class Wire {
     
-    private final double thickness;
     private final ArrayList<WireSegment> wireSegments;
     private final Property<Shape> shapeProperty;
     private final Property<Double> voltageProperty;
 
-    public Wire( double thickness, ArrayList<WireSegment> wireSegments ) {
+    public Wire( ArrayList<WireSegment> wireSegments ) {
         
-        this.thickness = thickness;
         this.wireSegments = new ArrayList<WireSegment>( wireSegments );
         this.shapeProperty = new Property<Shape>( createShape() );
         this.voltageProperty = new Property<Double>( 0.0 );
@@ -63,23 +58,19 @@ public class Wire {
         return shapeProperty.getValue();
     }
     
-    private Shape createShape() {
-        return new Area( new BasicStroke( (float) getThickness(), BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER ).createStrokedShape( getPath() ) );
-    }
-
     public double getThickness() {
-        return thickness;
+        return wireSegments.get( 0 ).getThickness();
+    }
+    
+    private Shape createShape() {
+        Area area = new Area();
+        for ( WireSegment wireSegment : wireSegments ) {
+            area.add( new Area( wireSegment.createShape() ) );
+        }
+        return area;
     }
 
     public boolean containsPoint(Point3D pt){
         return shapeProperty.getValue().contains( pt.getX(),pt.getY() );
-    }
-
-    private GeneralPath getPath(){
-        DoubleGeneralPath path = new DoubleGeneralPath( wireSegments.get(0).getStartPoint() );
-        for ( WireSegment wireSegment : wireSegments ) {
-            path.lineTo( wireSegment.getEndPoint() );
-        }
-        return path.getGeneralPath();
     }
 }
