@@ -2,6 +2,11 @@
 
 package edu.colorado.phet.capacitorlab.model;
 
+import java.awt.BasicStroke;
+import java.awt.Shape;
+import java.awt.Stroke;
+import java.awt.geom.Area;
+import java.awt.geom.Line2D;
 import java.awt.geom.Point2D;
 
 import edu.colorado.phet.common.phetcommon.model.Property;
@@ -14,11 +19,17 @@ import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
  */
 public class WireSegment {
 
+    private final double thickness;
     private final Property<Point2D> startPointProperty, endPointProperty;
 
-    public WireSegment( Point2D startPoint, Point2D endPoint ) {
+    public WireSegment( double thickness, Point2D startPoint, Point2D endPoint ) {
+        this.thickness = thickness;
         this.startPointProperty = new Property<Point2D>( new Point2D.Double( startPoint.getX(), startPoint.getY() ) );
         this.endPointProperty = new Property<Point2D>( new Point2D.Double( endPoint.getX(), endPoint.getY() ) );
+    }
+    
+    public double getThickness() {
+        return thickness;
     }
 
     public void addStartPointObserver( SimpleObserver o ) {
@@ -43,5 +54,15 @@ public class WireSegment {
 
     public void setEndPoint( Point2D endPoint ) {
         this.endPointProperty.setValue( new Point2D.Double( endPoint.getX(), endPoint.getY() ) );
+    }
+    
+    public Shape createShape() {
+        Line2D line = new Line2D.Double( getStartPoint(), getEndPoint() );
+        /*
+         *  CAP_SQUARE ensures that the joints between segments will look correct.
+         *  But it does make the termination ends of the wires a tad longer.
+         */
+        Stroke stroke = new BasicStroke( (float) thickness, BasicStroke.CAP_SQUARE, BasicStroke.JOIN_MITER );
+        return new Area( stroke.createStrokedShape( line ) );
     }
 }
